feat: add setup template

--- a/.npmignore
+++ b/.npmignore
@@ -4,6 +4,7 @@
 !frontend/views/layouts/main-template.css
 !frontend/views/layouts/main-template.js
 !.prettierrc.json
+!build.setup-template.js
 !package-template.json
 !tsconfig.json
 !yff.js
