--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,7 +4,7 @@
     "semi": true,
     "singleQuote": true,
     "quoteProps": "consistent",
-    "trailingComma": "none",
+    "trailingComma": "es5",
     "bracketSpacing": false,
     "plugins": ["prettier-plugin-css-order", "prettier-plugin-jsdoc"],
     "cssDeclarationSorterOrder": "alphabetical",
