--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "version": "0.1.3",
     "author": "Sineway <sineway@ya.ru>",
     "type": "module",
-    "bin": "yff.js",
+    "bin": {
+        "yff": "yff.js"
+    },
     "scripts": {
         "start": "node yff --minify --reload",
         "style": "prettier frontend/views --write",
