--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,3 @@
 *
-!cli/*
-!frontend/assets/AppAsset.php
-!frontend/views/layouts/main-template.css
-!frontend/views/layouts/main-template.js
-!.prettierrc.json
-!build.setup-template.js
-!package-template.json
-!tsconfig.json
+!cli/**
 !yff.js
