--- a/lib/templates/package.json
+++ b/lib/templates/package.json
@@ -6,6 +6,9 @@
         "style": "prettier frontend/{assets,views} --write",
         "lint": "tsc"
     },
+    "browserslist": [
+        ">0.2% and not dead"
+    ],
     "devDependencies": {
         "prettier": "3.1.1",
         "prettier-plugin-css-order": "2.0.1",
