--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
-    "include": ["frontend"],
-    "exclude": ["frontend/web"],
+    "exclude": ["templates"],
 
     "compilerOptions": {
         "allowJs": true,
