--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "@types/browser-sync": "2.29.0",
         "@types/fs-extra": "11.0.4",
         "@types/postcss-import": "14.0.3",
+        "cssnano": "6.1.2",
+        "postcss-split-by-media": "0.3.0",
         "prettier": "3.1.1",
         "prettier-plugin-css-order": "2.0.1",
         "prettier-plugin-jsdoc": "1.3.0",
