--- a/templates/package.json
+++ b/templates/package.json
@@ -10,11 +10,12 @@
         ">0.2% and not dead"
     ],
     "devDependencies": {
+        "@prettier/plugin-php": "0.22.2",
         "prettier": "3.1.1",
         "prettier-plugin-css-order": "2.0.1",
         "prettier-plugin-jsdoc": "1.3.0",
         "typescript": "5.3.3",
-        "yff": "0.5.1"
+        "yff": "0.6.0"
     },
     "engines": {
         "node": ">=21"
