--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
         "chalk": "5.3.0",
         "cssnano": "6.1.2",
         "fs-extra": "11.2.0",
+        "postcss": "8.4.47",
         "postcss-import": "16.0.1",
         "postcss-preset-env": "9.3.0",
         "postcss-split-by-media": "0.3.0",
-        "rollup": "4.12.0",
-        "rollup-plugin-postcss": "4.0.2"
+        "rollup": "4.12.0"
     },
     "devDependencies": {
         "@types/browser-sync": "2.29.0",
