--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "postcss-import": "16.1.0",
         "postcss-preset-env": "10.0.7",
         "postcss-split-by-media": "0.3.0",
+        "postcss-url": "10.1.3",
         "rollup": "4.24.0"
     },
     "devDependencies": {
